--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -128,6 +128,8 @@
     &__user
       flex-direction: column
       justify-content: center
+    &__search
+      margin-left: 0
     &-bottom
       display: none
       position: fixed
